[add] --iterative = iteratively continue text

--- a/how_to_train/Makefile
+++ b/how_to_train/Makefile
@@ -8,6 +8,7 @@ all:
 # ===== MAIN STUFF
 
 LANGUAGE=eo
+ITERATIVE=5
 
 prep:
 	./preparation_$(LANGUAGE).sh
@@ -15,6 +16,11 @@ prep:
 train_model_from_scratch:
 	python3 model_from_scratch.py --language $(LANGUAGE)
 
+# best guesses for `<mask>`
 test_model:
 	python3 test_model.py --language $(LANGUAGE)
+
+# guess iteratively
+test_model_iterative:
+	python3 test_model.py --language $(LANGUAGE) --iterative $(ITERATIVE)
 
