[add] text fragmentation recovery task -- F1-score = 96.2

--- a/bert-sklearn-finetune/Makefile
+++ b/bert-sklearn-finetune/Makefile
@@ -10,7 +10,14 @@ D=data
 
 # ===== MAIN STUFF
 
-PATH_PREFIX=$D/mnsz2_pos/mnsz2_330000_POS_
+
+# MNSZ2 frag data
+DATAFILE=mnsz2_660000_frag
+#DATAFILE=mnsz2_330000_frag
+# MNSZ2 POS data
+#DATAFILE=mnsz2_330000_POS
+
+PATH_PREFIX=$D/mnsz2_pos/$(DATAFILE)_
 SUBSAMPLE_SIZE=1000
 SCRIPT=$S/bert_sklearn_tokseq_finetune.py
 finetune:
@@ -21,15 +28,15 @@ finetune:
 
 prepare: install getdata
 
-# MNSZ2 POS data
-DATASOURCE=http://corpus.nytud.hu/people/joker/mnsz2_330000_POS_
+DATASOURCE=http://corpus.nytud.hu/people/joker/$(DATAFILE)_
+
 getdata:
 	mkdir -p $D
-	cd $D ; rm -rf mnsz2_pos ; mkdir -p mnsz2_pos ; cd mnsz2_pos ; wget $(DATASOURCE)train.txt ; wget $(DATASOURCE)dev.txt ; wget $(DATASOURCE)test.txt
+	rm -f $(PATH_PREFIX)* ; cd $D ; mkdir -p mnsz2_pos ; cd mnsz2_pos ; wget $(DATASOURCE)train.txt ; wget $(DATASOURCE)dev.txt ; wget $(DATASOURCE)test.txt
 
 # torch max. verzió: 1.4
 install:
-	#conda activate torch1.4 -- KÉZZEL KELL!
+	@echo "ensure that pytorch version is <=1.4.0 by e.g. 'conda activate torch1.4'"
 	nvidia-smi
 	rm -rf bert-sklearn
 	git clone -b master https://github.com/charles9n/bert-sklearn
