[ref] `compute_metrics()` only once + [cos] format

--- a/text-generation/Makefile
+++ b/text-generation/Makefile
@@ -2,8 +2,8 @@
 all:
 	@echo "choose explicit target :)"
 
-tokclass:
-	clear ; time python tokclass.py > tokclass.out
+tokclass_conll2003:
+	clear ; time python tokclass.py > tokclass_conll2003.out
 
 seqclass_glue-cola:
 	clear ; time python seqclass.py glue-cola > seqclass_glue-cola.out
